Summary of changes between libmikmod 3.3.6 and libmikmod 3.3.7:
========================================================================

libmikmod v3.3.7 was released on XX-XXX-XXXX.

- Android support, thanks to Radovan Cervenka, with the OpenSL ES
  driver adapted from the old libmikmod-android project.


Summary of changes between libmikmod 3.3.5 and libmikmod 3.3.6:
========================================================================

libmikmod v3.3.6 was released on 20-Mar-2014.

- UMX loader: Minor corrections to the container parse code with
  relation to upkg file format. (for correctness' sake only...)
- ALSA and ESD drivers: Fixed a dlopen() issue.
- PulseAudio driver: Simplified its command line parser procedure,
  so that it always sets server and sink to some value, NULL or
  otherwise, and fix a very minor memory leak on some occasions.
- Configury, OSS driver: Removed useless check for /dev/sndstat
  presence, added <soundcard.h> check to cover all our bases for
  less common setups.
- Configury, NAS driver: Use the configury detected X header and
  library locations when necessary, not just hardcoded /usr/X11R6/.
- Several configury and makefile clean-ups.
- Added Dreamcast driver from the old 3.2.0b2 dreamcast.es port.


Summary of changes between libmikmod 3.3.4 and libmikmod 3.3.5:
========================================================================

libmikmod v3.3.5 was released on 10-Jan-2014.
This is a minor bugfix / maintenance release.

- New PulseAudio driver for audio output, using pa_simple_* api.
- Improved ALSA driver.
- mikmod.texi: Fixed document generation using newer texinfo.
- Updates and fixes to configury (autotools) and to cmake support.
  Cmake support covers more targets and options now.
- Made the aiff, wav and raw file writer drivers configurable: the
  library can be configured and compiled without any audio output
  drivers if so required, except for drv_nos ('nosound') of course.