@@ -341,6 +341,7 @@ SET (MIKMOD_LIB_MODULES
     drivers/drv_oss.c
     drivers/drv_osx.c
     drivers/drv_pipe.c
+    drivers/drv_psp.c
     drivers/drv_pulseaudio.c
     drivers/drv_raw.c
     drivers/drv_sam9407.c
