@@ -1,33 +1,35 @@
 EXTRA_DIST = CMakeLists.txt \
-             drv_AF.c     \
-             drv_aiff.c   \
-             drv_aix.c    \
-             drv_alsa.c   \
-             drv_dart.c   \
-             drv_dc.c     \
-             drv_ds.c     \
-             drv_esd.c    \
-             drv_gp32.c   \
-             drv_hp.c     \
-             drv_mac.c    \
-             drv_nas.c    \
-             drv_nos.c    \
-             drv_openal.c \
-             drv_os2.c    \
-             drv_osles.c  \
-             drv_oss.c    \
-             drv_osx.c    \
-             drv_pipe.c   \
-             drv_pulseaudio.c \
-             drv_raw.c    \
-             drv_sam9407.c\
-             drv_sb.c     \
-             drv_sdl.c    \
-             drv_sgi.c    \
-             drv_stdout.c \
-             drv_sun.c    \
-             drv_ultra.c  \
-             drv_wav.c    \
-             drv_win.c    \
-             drv_wss.c    \
-             drv_xaudio2.c
+	     drv_AF.c     \
+	     drv_aiff.c   \
+	     drv_aix.c    \
+	     drv_alsa.c   \
+	     drv_dart.c   \
+	     drv_dc.c     \
+	     drv_ds.c     \
+	     drv_esd.c    \
+	     drv_gp32.c   \
+	     drv_hp.c     \
+	     drv_mac.c    \
+	     drv_nas.c    \
+	     drv_nos.c    \
+	     drv_openal.c \
+	     drv_os2.c    \
+	     drv_osles.c  \
+	     drv_oss.c    \
+	     drv_osx.c    \
+	     drv_pipe.c   \
+	     drv_psp.c    \
+	     drv_pulseaudio.c \
+	     drv_raw.c    \
+	     drv_sam9407.c\
+	     drv_sb.c     \
+	     drv_sdl.c    \
+	     drv_sgi.c    \
+	     drv_stdout.c \
+	     drv_sun.c    \
+	     drv_ultra.c  \
+	     drv_wav.c    \
+	     drv_win.c    \
+	     drv_wss.c    \
+	     drv_xaudio2.c
+
