@@ -1,0 +1,22 @@
+PSPSDK = $(shell psp-config --pspsdk-path)
+PSPDIR = $(shell psp-config --psp-prefix)
+
+MY_DIR = ../psp
+
+INCDIR = $(MY_DIR)
+CFLAGS = -G0 -Wall -O2 -fno-strict-aliasing
+# -lpspaudio needed for psp audio driver
+# -lm needed for aiff file writer driver (if it was compiled)
+LIBS   = -L$(MY_DIR) -lmikmod -lpspaudio -lm
+
+OBJS            = example.o
+TARGET          = libmikmodtest
+EXTRA_TARGETS   = EBOOT.PBP
+PSP_EBOOT_TITLE = libmikmodtest
+EXTRA_CLEAN     = clean_kxploit
+
+include $(PSPSDK)/lib/build.mak
+
+clean_kxploit:
+	rm -rf $(TARGET)
+	rm -rf "$(TARGET)%"
