@@ -5,6 +5,8 @@ libmikmod v3.3.7 was released on XX-XXX-XXXX.
 
 - Android support, thanks to Radovan Cervenka, with the OpenSL ES
   driver adapted from the old libmikmod-android project.
+- New PSP driver (untested). Suggested by Jon Daniel, based on older
+  ports from pspdev.
 
 
 Summary of changes between libmikmod 3.3.5 and libmikmod 3.3.6:
